css/styles.css
/* ... */
.callout__heading {
  margin-top: 0;
  color: white;
}
.callout .btn {
  justify-self: center;
  align-self: center;
  padding-left: 8rem;
  padding-right: 8rem;
}
.callout__content p {
  font-size: 2.4rem;
}
@media screen and (min-width: 767px) {
  .callout .grid_1x2 {
    grid-template-columns: 1fr auto;
  }
  .callout__content {
    text-align: left;
  }
  .callout__content p {
    font-size: 2rem;
  }
  .callout_secondary .btn {
    padding-left: 5rem;
    padding-right: 5rem;
  }
  .callout .btn {
    justify-self: start;
    margin: 0 2rem;
  }
}

/* Collapsible */
.collapsible__header {
  display: flex;
  justify-content: space-between;
  cursor: pointer;
}
.collapsible__heading {
  margin-top: 0;
  font-size: 3rem;
}
.collapsible_chevron {
  transform: rotate(-90deg);
  transition: transform 0.3s;
}
.collapsible__content {
  max-height: 0; /* instead of using display block, where transitions dont work */
  overflow: hidden;
  opacity: 0;
  transition: opacity 0.3s;
}
.collapsible_expanded .collapsible_chevron {
  transform: rotate(0);
}
.collapsible_expanded .collapsible__content {
  max-height: 100vh;
  opacity: 1;
}

/* Blocks */
.block {
  --padding-vertical: 4rem;
  padding: var(--padding-vertical) 2rem;
}
.block__header {
  text-align: center;
  margin-bottom: 4rem;
}
.block__heading {
  margin-top: 0;
}
.block_dark {
  background: #000;
  color: #7b858b;
}
.block_dark h1,
.block_dark h2,
.block_dark h3 {
  color: #fff;
}
.block_skewed-right {
  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
  padding-bottom: calc(var(--padding-vertical) + 4rem);
}
.block_skewed-left {
  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
  padding-bottom: calc(var(--padding-vertical) + 4rem);
}
.container {
  max-width: 1140px;
  margin: 0 auto;
}

/* Nav menu */
.nav {
  background-color: #000;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 0 1rem;
  align-items: center;
}
.nav__list {
  width: 100%;
  margin: 0;
}
.nav__item {
  padding: 0.5rem 2rem;
  border-bottom: 1px solid #222;
}
.nav__item > a {
  color: #d2d0db;
  transition: color 0.3s;
}
.nav__item > a:hover {
  color: #fff;
}
.nav__toggler {
  opacity: 0.5;
  transition: box-shadow 0.15s;
  cursor: pointer;
}
.nav.collapsible_expanded .nav__toggler {
  opacity: 1;
  box-shadow: 0 0 2px 3px #666;
  border-radius: 5px;
}
.nav__brand {
  transform: translateY(5px);
}
@media screen and (min-width: 768px) {
  .nav__toggler {
    display: none;
  }
  .nav__list {
    width: auto;
    display: flex;
    font-size: 1.6rem;
    max-height: 100%;
    opacity: 1;
  }
  .nav__item {
    border: 0;
  }
}

/* Hero banner */
.hero__tagline {
  font-size: 2rem;
  color: #b9c3cf;
  letter-spacing: 1px;
  margin: 2rem 0 5rem;
}
.hero__image {
  width: 100%;
}
@media screen and (min-width: 768px) {
  .hero {
    padding-top: 0;
  }
  .hero__content {
    text-align: left;
    align-self: center;
  }
}

/* Domain block */
.block-domain .input-group {
  box-shadow: 0 15px 60px 0 rgb(9, 58, 88, 0.15);
  border: 0;
  margin: 4rem auto;
  max-width: 670px;
}
.block-domain__prices {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 6rem);
  font-size: 2rem;
  font-weight: 600;
  justify-items: center;
  max-width: 740px;
}
@media screen and (min-width: 768px) {
  .block-domain__prices {
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
    font-size: 1.5rem;
    margin: 0 auto;
  }
  .block-domain__prices .badge {
    font-size: 1.5rem;
  }
}

/* Plans block */
.plans {
  margin: 4rem 0;
}
.plans .card {
  max-width: 500px;
  margin: 3rem auto;
}
@media screen and (min-width: 1024px) {
  .plans .plan {
    margin: 3rem 2rem 1.5rem;
  }
}

/* Features */
.feature__heading {
  font-size: 3rem;
  margin: 1rem 0;
}
.feature {
  gap: 4rem 1rem;
}
.feature:first-of-type {
  margin-top: 5rem;
}
.feature__image {
  width: 100%;
}
@media screen and (min-width: 768px) {
  .feature__heading {
    font-size: 2.4rem;
  }
  .feature__text {
    font-size: 1.8rem;
  }
  .feature__content_order {
    order: 2;
  }
}

/* Showcase block */
.block-showcase__image > img {
  width: 100%;
}
@media screen and (min-width: 768px) {
  .block-showcase .grid {
    grid-template-columns: 50% 50%;
  }
  .block-showcase__image {
    width: auto;
    max-width: 700px;
    justify-self: end;
  }
  .block-showcase__image > img {
    width: auto;
    max-width: 700px;
  }
}

/* Footer */
.footer {
  background: #232323;
}
.footer .list li {
  color: #fff;
  opacity: 0.7;
}
.footer .list li:hover {
  opacity: 1;
}
.footer__section {
  padding: 2rem;
  border-bottom: 1px solid #393939;
}
.footer__section h2 {
  text-transform: uppercase;
}
.footer__brand {
  margin-top: 5rem;
  text-align: center;
}
.footer__copyright {
  font-size: 2.1rem;
  color: #fff;
  opacity: 0.3;
}
@media screen and (min-width: 768px) {
  .footer__sections {
    grid-template-columns: repeat(4, minmax(max-content, auto));
  }
  .footer__brand {
    grid-row: 2;
    grid-column: span 4;
  }
  .footer .collapsible_chevron {
    display: none;
  }
  .footer .collapsible__heading {
    font-size: 1.6rem;
  }
  .footer .collapsible__content {
    opacity: 1;
    max-height: 100%;
    font-size: 1.5rem;
  }
  .footer__brand {
    order: -1;
    margin-top: 1rem;
  }
  .footer__copyright {
    font-size: 1.5rem;
  }
  .footer__logo {
    max-width: 170px;
  }
  .footer .list li {
    margin-bottom: 1rem;
  }
  .footer__section {
    border-bottom: 0;
  }
}
@media screen and (min-width: 1024px) {
  .footer__sections {
    grid-template-columns: repeat(5, minmax(max-content, auto));
  }
  .footer__brand {
    grid-row: 1;
    grid-column: 1;
  }
}

